<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="409dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/puntuacionlocal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/puntuacion_inicial"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="36sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/separador"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="36sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/puntuacionvisitante"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/puntuacion_inicial"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="36sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/local"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/l_libre"
                    style="@android:style/Widget.DeviceDefault.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="localLibre"
                    android:text="@string/tiro_libre" />

                <Button
                    android:id="@+id/l_doble"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="localDoble"
                    android:text="@string/dobre" />

                <Button
                    android:id="@+id/l_triple"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="localTriple"
                    android:text="@string/tiro_triple" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/visitante"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/v_libre"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="visitanteLibre"
                    android:text="@string/tiro_libre" />

                <Button
                    android:id="@+id/v_doble"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="visitanteDoble"
                    android:text="@string/dobre" />

                <Button
                    android:id="@+id/v_triple"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="visitanteTriple"
                    android:text="@string/tiro_triple" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:onClick="borrarUltimaJugada"
        android:text="@string/ultimajugada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />



</android.support.constraint.ConstraintLayout>